SWMM-pyUI-topDir/Externals/swmm/outputapi/outputapi.py


hydraulic_head = (invert_depth + 1) # outputAPI.h: 93

stored_ponded_volume = (hydraulic_head + 1) # outputAPI.h: 93

lateral_inflow = (stored_ponded_volume + 1) # outputAPI.h: 93

total_inflow = (lateral_inflow + 1) # outputAPI.h: 93

flooding_losses = (total_inflow + 1) # outputAPI.h: 93

pollutant_conc_node = (flooding_losses + 1) # outputAPI.h: 93

SMO_nodeAttribute = enum_anon_7 # outputAPI.h: 93

enum_anon_8 = c_int # outputAPI.h: 103

flow_rate_link = 0 # outputAPI.h: 103

flow_depth = (flow_rate_link + 1) # outputAPI.h: 103

flow_velocity = (flow_depth + 1) # outputAPI.h: 103

flow_volume = (flow_velocity + 1) # outputAPI.h: 103

capacity = (flow_volume + 1) # outputAPI.h: 103

pollutant_conc_link = (capacity + 1) # outputAPI.h: 103

SMO_linkAttribute = enum_anon_8 # outputAPI.h: 103

enum_anon_9 = c_int # outputAPI.h: 121

air_temp = 0 # outputAPI.h: 121

rainfall_system = (air_temp + 1) # outputAPI.h: 121

snow_depth_system = (rainfall_system + 1) # outputAPI.h: 121

evap_infil_loss = (snow_depth_system + 1) # outputAPI.h: 121

runoff_flow = (evap_infil_loss + 1) # outputAPI.h: 121

dry_weather_inflow = (runoff_flow + 1) # outputAPI.h: 121

groundwater_inflow = (dry_weather_inflow + 1) # outputAPI.h: 121

RDII_inflow = (groundwater_inflow + 1) # outputAPI.h: 121

direct_inflow = (RDII_inflow + 1) # outputAPI.h: 121

total_lateral_inflow = (direct_inflow + 1) # outputAPI.h: 121

flood_losses = (total_lateral_inflow + 1) # outputAPI.h: 121

outfall_flows = (flood_losses + 1) # outputAPI.h: 121

volume_stored = (outfall_flows + 1) # outputAPI.h: 121

evap_rate = (volume_stored + 1) # outputAPI.h: 121

SMO_systemAttribute = enum_anon_9 # outputAPI.h: 121

# outputAPI.h: 138
if hasattr(_libs['outputapi'], 'SMO_init'):
    SMO_init = _libs['outputapi'].SMO_init
    SMO_init.argtypes = []
    SMO_init.restype = POINTER(SMOutputAPI)

# outputAPI.h: 139
if hasattr(_libs['outputapi'], 'SMO_open'):
    SMO_open = _libs['outputapi'].SMO_open
    SMO_open.argtypes = [POINTER(SMOutputAPI), String]
    SMO_open.restype = c_int

# outputAPI.h: 141
if hasattr(_libs['outputapi'], 'SMO_getProjectSize'):
    SMO_getProjectSize = _libs['outputapi'].SMO_getProjectSize
    SMO_getProjectSize.argtypes = [POINTER(SMOutputAPI), SMO_elementCount, POINTER(c_int)]
    SMO_getProjectSize.restype = c_int

# outputAPI.h: 142
if hasattr(_libs['outputapi'], 'SMO_getResultCount'):
    SMO_getResultCount = _libs['outputapi'].SMO_getResultCount
    SMO_getResultCount.argtypes = [POINTER(SMOutputAPI), SMO_elementType, POINTER(c_int)]
    SMO_getResultCount.restype = c_int

# outputAPI.h: 144
if hasattr(_libs['outputapi'], 'SMO_getUnits'):
    SMO_getUnits = _libs['outputapi'].SMO_getUnits
    SMO_getUnits.argtypes = [POINTER(SMOutputAPI), SMO_unit, POINTER(c_int)]
    SMO_getUnits.restype = c_int

# outputAPI.h: 145
if hasattr(_libs['outputapi'], 'SMO_getPollutantUnits'):
    SMO_getPollutantUnits = _libs['outputapi'].SMO_getPollutantUnits
    SMO_getPollutantUnits.argtypes = [POINTER(SMOutputAPI), c_int, POINTER(c_int)]
    SMO_getPollutantUnits.restype = c_int

# outputAPI.h: 147
if hasattr(_libs['outputapi'], 'SMO_getStartTime'):
    SMO_getStartTime = _libs['outputapi'].SMO_getStartTime
    SMO_getStartTime.argtypes = [POINTER(SMOutputAPI), POINTER(c_double)]
    SMO_getStartTime.restype = c_int

# outputAPI.h: 148
if hasattr(_libs['outputapi'], 'SMO_getTimes'):
    SMO_getTimes = _libs['outputapi'].SMO_getTimes
    SMO_getTimes.argtypes = [POINTER(SMOutputAPI), SMO_time, POINTER(c_int)]
    SMO_getTimes.restype = c_int

# outputAPI.h: 150
if hasattr(_libs['outputapi'], 'SMO_getElementName'):
    SMO_getElementName = _libs['outputapi'].SMO_getElementName
    SMO_getElementName.argtypes = [POINTER(SMOutputAPI), SMO_elementType, c_int, String, c_int]
    SMO_getElementName.restype = c_int

# outputAPI.h: 153
if hasattr(_libs['outputapi'], 'SMO_newOutValueSeries'):
    SMO_newOutValueSeries = _libs['outputapi'].SMO_newOutValueSeries
    SMO_newOutValueSeries.argtypes = [POINTER(SMOutputAPI), c_long, c_long, POINTER(c_long), POINTER(c_int)]
    SMO_newOutValueSeries.restype = POINTER(c_float)

# outputAPI.h: 155
if hasattr(_libs['outputapi'], 'SMO_newOutValueArray'):
    SMO_newOutValueArray = _libs['outputapi'].SMO_newOutValueArray
    SMO_newOutValueArray.argtypes = [POINTER(SMOutputAPI), SMO_apiFunction, SMO_elementType, POINTER(c_long), POINTER(c_int)]
    SMO_newOutValueArray.restype = POINTER(c_float)

# outputAPI.h: 158
if hasattr(_libs['outputapi'], 'SMO_getSubcatchSeries'):
    SMO_getSubcatchSeries = _libs['outputapi'].SMO_getSubcatchSeries
    SMO_getSubcatchSeries.argtypes = [POINTER(SMOutputAPI), c_int, SMO_subcatchAttribute, c_long, c_long, POINTER(c_float)]
    SMO_getSubcatchSeries.restype = c_int

# outputAPI.h: 160
if hasattr(_libs['outputapi'], 'SMO_getNodeSeries'):
    SMO_getNodeSeries = _libs['outputapi'].SMO_getNodeSeries
    SMO_getNodeSeries.argtypes = [POINTER(SMOutputAPI), c_int, SMO_nodeAttribute, c_long, c_long, POINTER(c_float)]
    SMO_getNodeSeries.restype = c_int

# outputAPI.h: 162
if hasattr(_libs['outputapi'], 'SMO_getLinkSeries'):
    SMO_getLinkSeries = _libs['outputapi'].SMO_getLinkSeries
    SMO_getLinkSeries.argtypes = [POINTER(SMOutputAPI), c_int, SMO_linkAttribute, c_long, c_long, POINTER(c_float)]
    SMO_getLinkSeries.restype = c_int

# outputAPI.h: 164
if hasattr(_libs['outputapi'], 'SMO_getSystemSeries'):
    SMO_getSystemSeries = _libs['outputapi'].SMO_getSystemSeries
    SMO_getSystemSeries.argtypes = [POINTER(SMOutputAPI), SMO_systemAttribute, c_long, c_long, POINTER(c_float)]
    SMO_getSystemSeries.restype = c_int

# outputAPI.h: 167
if hasattr(_libs['outputapi'], 'SMO_getSubcatchAttribute'):
    SMO_getSubcatchAttribute = _libs['outputapi'].SMO_getSubcatchAttribute
    SMO_getSubcatchAttribute.argtypes = [POINTER(SMOutputAPI), c_long, SMO_subcatchAttribute, POINTER(c_float)]
    SMO_getSubcatchAttribute.restype = c_int

# outputAPI.h: 169
if hasattr(_libs['outputapi'], 'SMO_getNodeAttribute'):
    SMO_getNodeAttribute = _libs['outputapi'].SMO_getNodeAttribute
    SMO_getNodeAttribute.argtypes = [POINTER(SMOutputAPI), c_long, SMO_nodeAttribute, POINTER(c_float)]
    SMO_getNodeAttribute.restype = c_int

# outputAPI.h: 171
if hasattr(_libs['outputapi'], 'SMO_getLinkAttribute'):
    SMO_getLinkAttribute = _libs['outputapi'].SMO_getLinkAttribute
    SMO_getLinkAttribute.argtypes = [POINTER(SMOutputAPI), c_long, SMO_linkAttribute, POINTER(c_float)]
    SMO_getLinkAttribute.restype = c_int

# outputAPI.h: 173
if hasattr(_libs['outputapi'], 'SMO_getSystemAttribute'):
    SMO_getSystemAttribute = _libs['outputapi'].SMO_getSystemAttribute
    SMO_getSystemAttribute.argtypes = [POINTER(SMOutputAPI), c_long, SMO_systemAttribute, POINTER(c_float)]
    SMO_getSystemAttribute.restype = c_int

# outputAPI.h: 176
if hasattr(_libs['outputapi'], 'SMO_getSubcatchResult'):
    SMO_getSubcatchResult = _libs['outputapi'].SMO_getSubcatchResult
    SMO_getSubcatchResult.argtypes = [POINTER(SMOutputAPI), c_long, c_int, POINTER(c_float)]
    SMO_getSubcatchResult.restype = c_int

# outputAPI.h: 178
if hasattr(_libs['outputapi'], 'SMO_getNodeResult'):
    SMO_getNodeResult = _libs['outputapi'].SMO_getNodeResult
    SMO_getNodeResult.argtypes = [POINTER(SMOutputAPI), c_long, c_int, POINTER(c_float)]
    SMO_getNodeResult.restype = c_int

# outputAPI.h: 180
if hasattr(_libs['outputapi'], 'SMO_getLinkResult'):
    SMO_getLinkResult = _libs['outputapi'].SMO_getLinkResult
    SMO_getLinkResult.argtypes = [POINTER(SMOutputAPI), c_long, c_int, POINTER(c_float)]
    SMO_getLinkResult.restype = c_int

# outputAPI.h: 182
if hasattr(_libs['outputapi'], 'SMO_getSystemResult'):
    SMO_getSystemResult = _libs['outputapi'].SMO_getSystemResult
    SMO_getSystemResult.argtypes = [POINTER(SMOutputAPI), c_long, c_int, POINTER(c_float)]
    SMO_getSystemResult.restype = c_int

# outputAPI.h: 185
if hasattr(_libs['outputapi'], 'SMO_free'):
    SMO_free = _libs['outputapi'].SMO_free
    SMO_free.argtypes = [POINTER(c_float)]
    SMO_free.restype = None

# outputAPI.h: 187
if hasattr(_libs['outputapi'], 'SMO_close'):
    SMO_close = _libs['outputapi'].SMO_close
    SMO_close.argtypes = [POINTER(SMOutputAPI)]
    SMO_close.restype = c_int

# outputAPI.h: 188
if hasattr(_libs['outputapi'], 'SMO_errMessage'):
    SMO_errMessage = _libs['outputapi'].SMO_errMessage
    SMO_errMessage.argtypes = [c_int, String, c_int]
    SMO_errMessage.restype = None

# <command-line>: 1
try:
    _REENTRANT = 1
except:
    pass

__const = c_int # <command-line>: 5

# <command-line>: 8
try:
    CTYPESGEN = 1
except:
    pass

# outputAPI.h: 13
try:
    MAXFILENAME = 259
except:
    pass

# outputAPI.h: 14
try:
    MAXELENAME = 31
except:
    pass

# outputAPI.h: 17
try:
    ERR410 = 'Error 410: SMO_init() has not been called'
except:
    pass

# outputAPI.h: 18
try:
    ERR411 = 'Error 411: SMO_open() has not been called'
except:
    pass

# outputAPI.h: 19
try:
    ERR414 = 'Error 414: memory allocation failure'
except:
    pass

# outputAPI.h: 21
try:
    ERR421 = 'Input Error 421: invalid parameter code'
except:
    pass

# outputAPI.h: 22
try:
    ERR422 = 'Input Error 422: reporting period index out of range'
except:
    pass

# outputAPI.h: 23
try:
    ERR423 = 'Input Error 423: element index out of range'
except:
    pass

# outputAPI.h: 24
try:
    ERR424 = 'Input Error 424: no memory allocated for results'
except:
    pass

# outputAPI.h: 26
try:
    ERR434 = 'File Error 434: unable to open binary output file'
except:
    pass

# outputAPI.h: 27
try:
    ERR435 = 'File Error 435: invalid file - not created by SWMM'
except:
    pass

# outputAPI.h: 28
try:
    ERR436 = 'File Error 436: invalid file - contains no results'
except:
    pass

# outputAPI.h: 29
try:
    ERR437 = 'File Error 437: invalid file - model run issued warnings'
except:
    pass

# outputAPI.h: 31
try:
    ERR440 = 'ERROR 440: an unspecified error has occurred'
except:
    pass

MAXID = 31

SMOutputAPI = struct_SMOutputAPI # outputAPI.h: 33

# No inserted files

